name:             zmidi-basic
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Utilities built on top of ZMidi-Core.
description:
  .
  
  .
  Changelog:
  . 
  v0.1.0:
  .
  * Initial release.
  .
  .
build-type:         Simple
stability:          unstable
cabal-version:      >= 1.2

extra-source-files:
  CHANGES,
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5,
                      time              >= 1.1.3  && <  1.6,
                      zmidi-core        >  0.1.0  && < 0.3.0
  
  exposed-modules:
    ZMidi.Basic.Construction,
    ZMidi.Basic.Construction.Builder,
    ZMidi.Basic.Construction.Datatypes,
    ZMidi.Basic.Construction.OutputMidi,
    ZMidi.Basic.GeneralMidiInstruments,
    ZMidi.Basic.VersionNumber

  other-modules:
    ZMidi.Basic.Construction.HList
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
