name:             zmidi-basic
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Higher level music representation built on ZMidi-Core.
description:
  .
  An arbitrary time representation built on ZMidi-Core and MIDI.
  .
  Changelog:
  . 
  v0.1.0:
  .
  * Initial release.
  .
  .
build-type:         Simple
stability:          unstable
cabal-version:      >= 1.2

extra-source-files:
  CHANGES,
  demo/Demo01.hs,
  demo/Perc.hs,
  demo/Scale.hs
  demo/VolumeChange.hs,
  demo/WasnRhythms.hs

library
  hs-source-dirs:     src
  build-depends:      base              <  5,
                      containers        >= 0.3    &&  < 0.6, 
                      time              >= 1.1.3  &&  < 1.6,
                      zmidi-core        >= 0.3.0  &&  < 0.4.0
  
  exposed-modules:
    ZMidi.Basic.Kernel,
    ZMidi.Basic.Kernel.Base.BaseDefs,
    ZMidi.Basic.Kernel.Base.RenderContext,
    ZMidi.Basic.Kernel.Objects.Chain,
    ZMidi.Basic.Kernel.Objects.AdvEvent,
    ZMidi.Basic.Kernel.Objects.Event,
    ZMidi.Basic.Kernel.Objects.GMDrums,
    ZMidi.Basic.Kernel.Objects.GMInstruments,
    ZMidi.Basic.Kernel.Objects.TraceOutput,
    ZMidi.Basic.Primitive.EventList,
    ZMidi.Basic.Primitive.RenderMidi,
    ZMidi.Basic.Symbolic,
    ZMidi.Basic.Symbolic.Symbolic,
    ZMidi.Basic.VersionNumber
    ZMidi.Basic.Utils.HList,
    ZMidi.Basic.Utils.JoinList

  other-modules:
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
