name:             zscore
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Score files...
description:
  Score files (Csound).
  .
  (c) Stephen Tetley 2011
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Inst101.hs,
  demo/Sco101.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5
  
  exposed-modules:
    ZScore.CSDDoc,
    ZScore.CsoundGens,
    ZScore.CsoundInst,
    ZScore.CsoundScore,
    ZScore.Opcodes,
    ZScore.OutputCSD

  other-modules:
    ZScore.Utils.FormatCombinators,
    ZScore.Utils.HList
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
