name:             zsnd-basic
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Basic objects built on ZSnd-Core.
description:
  Generate Csound - kernel code for higher level music built on 
  zsnd-core.
  .
  (c) Stephen Tetley 2011
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Xanadu.hs,
  demo/XanaduInst.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5,
                      vector-space      >= 0.6     && <  1.0,
                      zsnd-core         == 0.1.0

  exposed-modules:
    ZSnd.Basic.Kernel,
    ZSnd.Basic.Kernel.Base.BaseDefs,
    ZSnd.Basic.Kernel.Base.Context,
    ZSnd.Basic.Kernel.Base.WrappedPrimitive,
    ZSnd.Basic.Kernel.Objects.AdvEvent,
    ZSnd.Basic.Kernel.Objects.AdvNotelist,
    ZSnd.Basic.Kernel.Objects.Basis,
    ZSnd.Basic.Kernel.Objects.Concat,
    ZSnd.Basic.Kernel.Objects.Connector,
    ZSnd.Basic.Kernel.Objects.GenRoutines,
    ZSnd.Basic.Kernel.Objects.LocEvent,
    ZSnd.Basic.Kernel.Objects.PosEvent,
    ZSnd.Basic.Kernel.Objects.Score,
    ZSnd.Basic.Kernel.Objects.TraceLoc,
    ZSnd.Basic.Kernel.Objects.TraceNotelist,
    ZSnd.Basic.Utils.HList,
    ZSnd.Basic.Utils.JoinList

  other-modules:
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
