name:             zsnd-core
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Generate Csound
description:
  Generate Csound - both scores and orchestras.
  . 
  The embeddings are somewhat trivial...
  .
  (c) Stephen Tetley 2011
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo101.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5
  
  exposed-modules:
    ZSnd.Core,
    ZSnd.Core.CsoundInst,
    ZSnd.Core.CsoundScore,
    ZSnd.Core.GenRoutines,
    ZSnd.Core.Opcodes,
    ZSnd.Core.Opcodes.Base,
    ZSnd.Core.Opcodes.SignalGenerators,
    ZSnd.Core.Opcodes.SignalModifiers,
    ZSnd.Core.OutputCsound

  other-modules:
    ZSnd.Core.CSDDoc,
    ZSnd.Core.Utils.FormatCombinators,
    ZSnd.Core.Utils.HList
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
